# daruma

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  claude-runner-design.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 2af01557bde3_initial.py  a1b2c3d4e5f6_add_output_format_and_destination_to_tasks.py  b623e165a31e_add_skills.py  c7d8e9f0a1b2_add_env_vars_to_tasks.py  d8e9f0a1b2c3_add_pipelines.py  e1f2a3b4c5d6_file_backed_global_skills.py
app/: cli.py  config.py  db.py  main.py  models.py  repository.py  runner.py  scheduler.py  services.py
app/crud/: __init__.py  exceptions.py  pipeline_runs.py  pipelines.py  runs.py  skills.py  task_skills.py  tasks.py
app/models/: __init__.py  database.py  pipeline.py  pipeline_run.py  run.py  schemas.py  skill.py  task.py  (+1 more)
static/: style.css
templates/: base.html  pipeline_detail.html  pipeline_form.html  pipeline_run_detail.html  pipelines_list.html  run_detail.html  skill_detail.html  skill_form.html  skills_list.html  task_detail.html  task_form.html  tasks_list.html
tests/: conftest.py  test_api_pipelines.py  test_api_runs.py  test_api_skills.py  test_api_tasks.py  test_api_triggers.py  test_cli.py  test_crud.py  test_crud_pipelines.py  test_crud_skills.py  test_db.py  test_env_vars.py  test_output.py  test_pipeline_integration.py  test_repository.py  test_runner.py  test_scheduler.py  test_services.py  test_ui_skills.py
(+24 files in other folders)
