[project]
name = "daruma"
version = "0.1.0"
description = "Docker-based task scheduler for Claude CLI automations"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "apscheduler>=3.10.0,<4",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "rich>=13.0",
]

[project.scripts]
daruma = "app.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
